fix: overflow hidden for mobile devises

--- a/src/sass/base/_base.sass
+++ b/src/sass/base/_base.sass
@@ -6,7 +6,6 @@ body
   font-size: 14px
   font-weight: 400
   color: $black
-  overflow-x: hidden
 
 ul
   margin: 0
@@ -21,6 +20,7 @@ a
   margin: 0 auto
   width: calc(100% - 128px)
   max-width: 1600px
+  overflow: hidden
   @include v-lg
     width: calc(100% - 64px)
   @include v-sm
